--- a/GUI/src/JavaFx/Body/FlowHistory/FlowHistory.fxml
+++ b/GUI/src/JavaFx/Body/FlowHistory/FlowHistory.fxml
@@ -55,7 +55,7 @@
                   <Separator prefWidth="200.0" />
                   <HBox alignment="TOP_RIGHT">
                      <children>
-                        <Button fx:id="rerunButton" mnemonicParsing="false" text="Rerun flow" />
+                        <Button fx:id="rerunButton" mnemonicParsing="false" onAction="#rerunFlow" text="Rerun flow" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" right="5.0" />
