--- a/GUI/src/JavaFx/Body/FlowHistory/FlowHistory.fxml
+++ b/GUI/src/JavaFx/Body/FlowHistory/FlowHistory.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -16,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="724.0" prefWidth="1031.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowHistory.FlowHistory">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="724.0" prefWidth="1042.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowHistory.FlowHistory">
    <content>
       <BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="597.0">
          <top>
@@ -35,15 +36,19 @@
                         <Insets bottom="5.0" />
                      </padding>
                   </TableView>
-                  <VBox alignment="TOP_CENTER" spacing="8.0">
+                  <VBox fx:id="filterVbox" alignment="TOP_CENTER" spacing="8.0">
                      <children>
                         <Label fx:id="filterSelectionLabel" text="Choose Filter" />
-                        <ComboBox fx:id="filterChoose" prefHeight="31.0" prefWidth="131.0" />
-                        <ImageView fx:id="resetTable" fitHeight="40.0" fitWidth="34.0" onMouseClicked="#restTableFilter" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@61225.png" />
-                           </image>
-                        </ImageView>
+                        <HBox alignment="CENTER" spacing="2.0">
+                           <children>
+                              <ComboBox fx:id="filterChoose" prefHeight="31.0" prefWidth="131.0" />
+                              <ImageView fx:id="resetTable" fitHeight="26.0" fitWidth="22.0" onMouseClicked="#restTableFilter" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@61225.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </HBox>
                      </children>
                   </VBox>
                </children>
@@ -53,9 +58,16 @@
             <VBox BorderPane.alignment="CENTER">
                <children>
                   <Separator prefWidth="200.0" />
-                  <HBox alignment="TOP_RIGHT">
+                  <HBox alignment="TOP_RIGHT" spacing="5.0">
                      <children>
                         <Button fx:id="rerunButton" mnemonicParsing="false" onAction="#rerunFlow" text="Rerun flow" />
+                        <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="0.0" />
+                        <ChoiceBox fx:id="continuationChoiceBox" onMouseEntered="#setContinuationText" prefHeight="31.0" prefWidth="143.0" />
+                        <ImageView fx:id="continuationButtonImage" fitHeight="31.0" fitWidth="45.0" onMouseClicked="#continueToFlow" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../FlowExecution/continueIcon.png" />
+                           </image>
+                        </ImageView>
                      </children>
                      <padding>
                         <Insets bottom="5.0" right="5.0" />
